Generate new api service and main db
