# specs/apis/dist/openapi.json
@@ -16,6 +16,9 @@
       "post": {
         "summary": "Authenticate User",
         "operationId": "loginUser",
+        "tags": [
+          "auth"
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -47,6 +50,9 @@
       "post": {
         "summary": "Logout User",
         "operationId": "logoutUser",
+        "tags": [
+          "auth"
+        ],
         "responses": {
           "200": {
             "description": "Successful logout"
@@ -58,6 +64,9 @@
       "get": {
         "summary": "Get Users",
         "operationId": "getUsers",
+        "tags": [
+          "users"
+        ],
         "responses": {
           "200": {
             "description": "List of users",
@@ -77,6 +86,9 @@
       "post": {
         "summary": "Create User",
         "operationId": "createUser",
+        "tags": [
+          "users"
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -103,12 +115,119 @@
           }
         }
       }
+    },
+    "/todos": {
+      "get": {
+        "summary": "List all todos",
+        "tags": [
+          "todos"
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of todo items",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/todo"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new todo",
+        "tags": [
+          "todos"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTodoRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "The created todo item",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/todo"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request body"
+          }
+        }
+      }
+    },
+    "/todos/{id}": {
+      "put": {
+        "summary": "Update a todo",
+        "tags": [
+          "todos"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateTodoRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The updated todo item",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/todo"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request body"
+          },
+          "404": {
+            "description": "Todo item not found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a todo",
+        "tags": [
+          "todos"
+        ],
+        "responses": {
+          "204": {
+            "description": "Todo item successfully deleted"
+          },
+          "404": {
+            "description": "Todo item not found"
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
       "User": {
         "$ref": "#/components/schemas/user"
+      },
+      "Todo": {
+        "$ref": "#/components/schemas/todo"
       },
       "LoginRequest": {
         "type": "object",
@@ -175,6 +294,64 @@
           },
           "name": {
             "type": "string"
+          }
+        }
+      },
+      "todo": {
+        "type": "object",
+        "required": [
+          "id",
+          "title",
+          "completed",
+          "created_at"
+        ],
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "description": "Unique identifier for the todo item"
+          },
+          "title": {
+            "type": "string",
+            "description": "The title/description of the todo item"
+          },
+          "completed": {
+            "type": "boolean",
+            "description": "Whether the todo item has been completed"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time",
+            "description": "When the todo item was created"
+          }
+        }
+      },
+      "CreateTodoRequest": {
+        "type": "object",
+        "required": [
+          "title"
+        ],
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "The title/description of the todo item"
+          }
+        }
+      },
+      "UpdateTodoRequest": {
+        "type": "object",
+        "required": [
+          "title",
+          "completed"
+        ],
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "The title/description of the todo item"
+          },
+          "completed": {
+            "type": "boolean",
+            "description": "Whether the todo item has been completed"
           }
         }
       }
